--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions":{
         "target":"es5",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJS": true,
+        "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
