--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.9"
+    "mongoose": "^6.1.9",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
